; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ax-gdb.c_require_rvalue.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ax-gdb.c_require_rvalue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.agent_expr = type { i32 }
%struct.axs_value = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.agent_expr*, %struct.axs_value*)* @require_rvalue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @require_rvalue(%struct.agent_expr* %0, %struct.axs_value* %1) #0 {
  %3 = alloca %struct.agent_expr*, align 8
  %4 = alloca %struct.axs_value*, align 8
  store %struct.agent_expr* %0, %struct.agent_expr** %3, align 8
  store %struct.axs_value* %1, %struct.axs_value** %4, align 8
  %5 = load %struct.axs_value*, %struct.axs_value** %4, align 8
  %6 = getelementptr inbounds %struct.axs_value, %struct.axs_value* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %27 [
    i32 128, label %8
    i32 130, label %9
    i32 129, label %15
  ]

8:                                                ; preds = %2
  br label %27

9:                                                ; preds = %2
  %10 = load %struct.agent_expr*, %struct.agent_expr** %3, align 8
  %11 = load %struct.axs_value*, %struct.axs_value** %4, align 8
  %12 = getelementptr inbounds %struct.axs_value, %struct.axs_value* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @gen_fetch(%struct.agent_expr* %10, i32 %13)
  br label %27

15:                                               ; preds = %2
  %16 = load %struct.agent_expr*, %struct.agent_expr** %3, align 8
  %17 = load %struct.axs_value*, %struct.axs_value** %4, align 8
  %18 = getelementptr inbounds %struct.axs_value, %struct.axs_value* %17, i32 0, i32 2
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @ax_reg(%struct.agent_expr* %16, i32 %20)
  %22 = load %struct.agent_expr*, %struct.agent_expr** %3, align 8
  %23 = load %struct.axs_value*, %struct.axs_value** %4, align 8
  %24 = getelementptr inbounds %struct.axs_value, %struct.axs_value* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @gen_extend(%struct.agent_expr* %22, i32 %25)
  br label %27

27:                                               ; preds = %2, %15, %9, %8
  %28 = load %struct.axs_value*, %struct.axs_value** %4, align 8
  %29 = getelementptr inbounds %struct.axs_value, %struct.axs_value* %28, i32 0, i32 0
  store i32 128, i32* %29, align 4
  ret void
}

declare dso_local i32 @gen_fetch(%struct.agent_expr*, i32) #1

declare dso_local i32 @ax_reg(%struct.agent_expr*, i32) #1

declare dso_local i32 @gen_extend(%struct.agent_expr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
